Revert "fix dropdown style, dark theme border, card title spacing"
This reverts commit 5d3120cae94dcb0d84348c1017bf1805586effca.

--- a/src/component/Navigation/Drawer/Drawer.scss
+++ b/src/component/Navigation/Drawer/Drawer.scss
@@ -1,10 +1,9 @@
 @import "../../../assets/config/global";
 .DrawerContainer {
-  // @extend %global-shadow;
+  @extend %global-shadow;
   height: 100%;
   width: 25rem;
   position: relative;
-  border-left: 1px solid;
   .add-box-container {
     padding-top: 2rem;
     .button-text {
